🍖 Reworked Farmer & Glutton